--- a/CSS-files/styles.css
+++ b/CSS-files/styles.css
@@ -1,3 +1,8 @@
+/* Created by: Evgeny Vovk
+* Created on: Fab 2022
+* This CSS file defines the style for index.html ICS2O-Unit1-04-HTML-CSS
+*/
+
 h1 {
   text-align: center;
   font-size: 250%;
