--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@
 * This CSS file defines the style for index.html ICS2O-Unit1-04-HTML-CSS
 */
 
+body {
+  background-color: cyan;
+}
+
 h1 {
   text-align: center;
   font-size: 250%;
