--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,6 @@
 * This CSS file defines the style for index.html ICS2O-Unit1-04-HTML-CSS
 */
 
-body {
-  background-color: cyan;
-}
-
 h1 {
   text-align: center;
   font-size: 250%;
@@ -36,4 +32,8 @@ h3 {
   text-align: center;
   color: black;
   font-size: 100%;
+}
+
+img {
+  text-align: center;
 }
