--- a/css/styles2.css
+++ b/css/styles2.css
@@ -3,6 +3,16 @@
 * This CSS file defines the style for extra-index.html ICS2O-Unit1-04-HTML
 */
 
+h1{
+  background-color: rgb(0 150 0);
+  margin-left: 15em;
+  margin-right: 15em;
+}
+
 p {
-  background-color: green;
+  display: block;
+  margin-left: 20em;
+  margin-right: 20em;
+  background-color: white;
+  border: 2px solid black;
 }
