--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 h1 {
   text-align: center;
   font-size: 250%;
-  background-color: rgb(200 0 0);
+  background-color: red;
   color: white;
   padding: 30px;
 }
