--- a/css/styles2.css
+++ b/css/styles2.css
@@ -7,12 +7,23 @@ h1 {
   background-color: rgb(0 150 0);
   margin-left: 15em;
   margin-right: 15em;
+  border: 2px solid rgb(0 200 0);
 }
 
 p {
   display: block;
   margin-left: 20em;
   margin-right: 20em;
+  margin-top: -2em;
   background-color: white;
   border: 2px solid black;
+}
+
+h4 {
+  font-size: 150%;
+  background-color: white;
+  margin-left: 22em;
+  margin-right: 22em;
+  border: 3px solid gray;
+  text-align: center;
 }
