--- a/css/styles2.css
+++ b/css/styles2.css
@@ -3,6 +3,10 @@
 * This CSS file defines the style for extra-index.html ICS2O-Unit1-04-HTML
 */
 
+body {
+  background-color: cyan;
+}
+
 h1 {
   background-color: rgb(0 150 0);
   margin-left: 15em;
